--- a/native-app/package.json
+++ b/native-app/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
@@ -34,7 +35,9 @@
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
