--- a/native-app/package.json
+++ b/native-app/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -16,9 +16,13 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/picker": "^1.8.1",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/crashlytics": "^18.7.3",
+    "@react-native-firebase/perf": "^18.7.3",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.0.1",
-    "axios": "^1.5.0",
+    "axios": "^1.6.2",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -27,14 +31,16 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-picker-module": "^2.0.7",
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0"
